tentativa de bullet

--- a/envaders/space_invaders.vcxproj
+++ b/envaders/space_invaders.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="gl_utils.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="maths_funcs.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="gl_utils.h" />
     <ClInclude Include="maths_funcs.h" />
     <ClInclude Include="Nave.h" />
